[package]
name = "mrt"
description = "A tool to interact with multiple repositories, by executing the specified commands in multiple contexts."
version = "0.0.1"
authors = ["Jonas Natten <jonas@natten.it>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/jnatten/mrt"
keywords = ["vcs", "git", "microservices", "multitasking", "repository-management"]
categories = ["cli", "repository-management"]

[dependencies]
clap = "2.33.0" # Command line argument parser
colored = "1.9" # Terminal colors
rayon = "1.3.0" # Parallelization

# Json libraries
serde = { version = "1.0.98", features = ["derive"]}
serde_derive = "1.0.98"
serde_json = "1.0.40"

dirs = "2.0.2" # Used to determine dir for config platform agnostic
shellexpand = "2.0.0" # Used to expand tilde as home etc...

anyhow = "1.0.34" # Simpler error handling

[dev-dependencies]
tempdir = "0.3.7" # Used for testing config functionality
